[gd_scene load_steps=5 format=3 uid="uid://cv85bafp0tf4h"]

[ext_resource type="Script" path="res://Game.gd" id="1_skk2c"]

[sub_resource type="Gradient" id="Gradient_7ppl2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0430392, 0.0430392, 0.0430392, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3hfta"]
gradient = SubResource("Gradient_7ppl2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_af1qw"]
size = Vector2(1152, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1_skk2c")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(4.5, 648)
texture = SubResource("GradientTexture1D_3hfta")

[node name="Player1Position" type="Marker2D" parent="."]
position = Vector2(35, 180)

[node name="Player2Position" type="Marker2D" parent="."]
position = Vector2(1117, 180)

[node name="BallPosition" type="Marker2D" parent="."]
position = Vector2(578, 307)

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(576, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
shape = SubResource("RectangleShape2D_af1qw")

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(575, 648)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
shape = SubResource("RectangleShape2D_af1qw")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player.tscn")
spawn_path = NodePath("..")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
